@@ -3,6 +3,7 @@ X-editable changelog
 
 Version 1.4.5 wip
 ----------------------------
+[enh #255] remove xxxView options from first level config of datetimepicker (vitalets)
 [enh] if `display` defined as function call it on init (vitalets)
 [enh #218] sourceCache now disables cache totally (vitalets)
 [bug #156] solve conflict of bootstrap datepicker and jQuery UI datepicker (vitalets)
